--- a/sdk/src/main/res/values/dimens.xml
+++ b/sdk/src/main/res/values/dimens.xml
@@ -33,4 +33,6 @@
     <dimen name="mpsdk_card_size_medium_number_height">17dp</dimen>
     <dimen name="mpsdk_card_size_medium_number_width">120dp</dimen>
     <dimen name="mpsdk_list_row_height">82dp</dimen>
+    <dimen name="mpsdk_payer_cost_small_text">20dp</dimen>
+    <dimen name="mpsdk_payer_cost_total_small_text">14dp</dimen>
 </resources>
