--- a/sdk/src/main/res/values/dimens.xml
+++ b/sdk/src/main/res/values/dimens.xml
@@ -35,4 +35,6 @@
     <dimen name="mpsdk_list_row_height">82dp</dimen>
     <dimen name="mpsdk_payer_cost_small_text">20dp</dimen>
     <dimen name="mpsdk_payer_cost_total_small_text">14dp</dimen>
+    <dimen name="mpsdk_payment_text_small_text">20dp</dimen>
+    <dimen name="mpsdk_payment_description_small_text">14dp</dimen>
 </resources>
