--- a/sdk/src/main/res/layout/mpsdk_activity_payment_types_normal.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_payment_types_normal.xml
@@ -40,6 +40,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center_horizontal"
             android:gravity="center_horizontal"
+            android:background="@color/mpsdk_white"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:descendantFocusability="afterDescendants"/>
     </FrameLayout>
