--- a/sdk/src/main/res/layout/mpsdk_activity_collapsing_checkout.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_collapsing_checkout.xml
@@ -131,7 +131,7 @@
                 </FrameLayout>
                 <FrameLayout
                     android:id="@+id/mpsdkReviewCancelButton"
-                    android:layout_width="140dp"
+                    android:layout_width="match_parent"
                     android:layout_height="48dp"
                     android:layout_marginTop="20dp"
                     android:layout_marginBottom="18dp"
