--- a/sdk/src/main/res/layout/mpsdk_content_instructions.xml
+++ b/sdk/src/main/res/layout/mpsdk_content_instructions.xml
@@ -86,6 +86,8 @@
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
                 android:layout_marginBottom="15dp"
+                android:paddingRight="15dp"
+                android:paddingLeft="15dp"
                 android:textSize="14dp"
                 tools:text="Info primaria"
                 app:fontStyle="regular" />
