--- a/sdk/src/main/res/layout/mpsdk_activity_payment_vault.xml
+++ b/sdk/src/main/res/layout/mpsdk_activity_payment_vault.xml
@@ -48,15 +48,25 @@
                 app:fontStyle="roboto_regular"
                 style="@style/mpsdk_title_text"/>
             </android.support.v7.widget.Toolbar>
-
         </android.support.design.widget.CollapsingToolbarLayout>
-
     </android.support.design.widget.AppBarLayout>
-    <FrameLayout
+
+
+    <LinearLayout
         android:id="@+id/mpsdkRegularLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="613dp"
+        android:orientation="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" >
+
+        <com.mercadopago.customviews.MPTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="Tengo un descuento"
+            android:onClick="startDiscountsActivity"
+            android:clickable="true"/>
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/mpsdkGroupsList"
             android:layout_width="match_parent"
@@ -68,5 +78,5 @@
             android:paddingRight="10dp"
             android:paddingStart="10dp"
             android:background="@color/mpsdk_white"/>
-    </FrameLayout>
+    </LinearLayout>
 </android.support.design.widget.CoordinatorLayout>
