--- a/sdk/src/main/res/layout/activity_discounts.xml
+++ b/sdk/src/main/res/layout/activity_discounts.xml
@@ -4,10 +4,6 @@
     android:id="@+id/activity_discounts"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     android:background="#009EE3"
     tools:context="com.mercadopago.DiscountsActivity">
 
@@ -18,7 +14,9 @@
         <FrameLayout
             android:id="@+id/mpsdkReviewSummaryContainer"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center">
+
         </FrameLayout>
     </ScrollView>
 </RelativeLayout>
