Modified summary layout

--- a/sdk/src/main/res/layout/activity_discounts.xml
+++ b/sdk/src/main/res/layout/activity_discounts.xml
@@ -15,7 +15,77 @@
             android:id="@+id/mpsdkReviewSummaryContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center">
+            android:paddingLeft="20dp"
+            android:paddingRight="20dp"
+            android:layout_gravity="center|center_horizontal">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="#FFFFFF">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <com.mercadopago.customviews.MPTextView
+                        android:id="@+id/mpsdkProduct"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        tools:text="Producto"/>
+
+                    <com.mercadopago.customviews.MPTextView
+                        android:id="@+id/mpsdkProductAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        tools:text="$ 1000"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <com.mercadopago.customviews.MPTextView
+                        android:id="@+id/mpsdkDiscount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        tools:text="Descuento"/>
+
+                    <com.mercadopago.customviews.MPTextView
+                        android:id="@+id/mpsdkDiscountAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        tools:text="$ 10"/>
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <com.mercadopago.customviews.MPTextView
+                        android:id="@+id/mpsdkTotal"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        tools:text="Total"/>
+
+                    <com.mercadopago.customviews.MPTextView
+                        android:id="@+id/mpsdkTotalAmount"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="20dp"
+                        tools:text="$ 990"/>
+                </LinearLayout>
+
+            </LinearLayout>
 
         </FrameLayout>
     </ScrollView>
