--- a/sdk/src/main/res/layout/mpsdk_review_discount_summary.xml
+++ b/sdk/src/main/res/layout/mpsdk_review_discount_summary.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:background="#FFFFFF">
+        android:background="@color/mpsdk_white">
 
         <LinearLayout
             android:id="@+id/mpsdkReviewSummaryTitleDiscount"
